src/main/java/com/example/demo/exceptions/errors/FileDeleteFailureException.java
package com.example.demo.exceptions.errors;

public class FileDeleteFailureException extends RuntimeException {
    public FileDeleteFailureException() {
    }
}
